creating signups for students and teams.

--- a/app/assets/javascripts/sitewide.js.erb
+++ b/app/assets/javascripts/sitewide.js.erb
@@ -4,4 +4,12 @@ $(document).on('turbolinks:load', function() {
   $('.parallax').parallax()
 
   $('.modal').modal()
+
+  $('select').material_select();
+
+  $(".dropdown-button").dropdown({
+    belowOrigin: true
+  });
+
+
 });
