--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,16 +2,9 @@
   <div class="section no-pad-bot">
     <div class="container">
       <br><br>
-      <h1 class="header center teal-text text-lighten-2">The Iron Nation Hackathon</h1>
-      <div class="row center">
-        <h3 class="header">Jan 6 - 8, 2017</h3>
-        <h5 class="header col s12 light hide-on-small-only">For Iron Yarders, By Iron Yarders</h5>
-      </div>
-      <div class="row center">
-        <a href="#signup" class="modal-trigger btn-large waves-effect waves-light teal lighten-1">Sign Up!</a>
-      </div>
+      <!-- banner section -->
+      <%= render 'banner_info' %>
       <br><br>
-
     </div>
   </div>
   <div class="parallax"><%= image_tag 'tiy1.jpg' %></div>
@@ -20,36 +13,8 @@
 
 <div class="container">
   <div class="section">
-
     <!--   Icon Section   -->
-    <div class="row">
-      <div class="col s12 m4">
-        <div class="icon-block">
-          <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-          <h5 class="center">Speeds up development</h5>
-
-          <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
-        </div>
-      </div>
-
-      <div class="col s12 m4">
-        <div class="icon-block">
-          <h2 class="center brown-text"><i class="material-icons">group</i></h2>
-          <h5 class="center">User Experience Focused</h5>
-
-          <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
-        </div>
-      </div>
-
-      <div class="col s12 m4">
-        <div class="icon-block">
-          <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-          <h5 class="center">Easy to work with</h5>
-
-          <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
-        </div>
-      </div>
-    </div>
+    <%= render 'icon_section' %>
   </div>
 </div>
 
@@ -57,9 +22,8 @@
 <div class="parallax-container valign-wrapper">
   <div class="section no-pad-bot">
     <div class="container">
-      <div class="row center">
-        <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
-      </div>
+      <!-- faq section -->
+      <%= render 'faq' %>
     </div>
   </div>
   <div class="parallax"><%= image_tag 'tiy2.jpg' %></div>
@@ -72,7 +36,7 @@
       <div class="col s12 center">
         <h3><i class="mdi-content-send brown-text"></i></h3>
         <h4>Contact Us</h4>
-        <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
+        <p class="center light">Add an issue to the Github page, and join the conversation on Slack!</p>
       </div>
     </div>
 
@@ -81,13 +45,13 @@
 
 
 <div id="signup" class="modal">
-    <div class="modal-content">
-      <div class="row">
-      <div class="col s3"></div>
-      <div class="col s6">
-       <%= render partial: 'users/form', locals: {user: @user} %>
-      </div>
-      <div class="col s3"></div>
-     </div>
+  <div class="modal-content">
+    <div class="row">
+    <div class="col s3"></div>
+    <div class="col s6">
+     <%= render partial: 'users/form', locals: {user: @user} %>
     </div>
+    <div class="col s3"></div>
+   </div>
   </div>
+</div>
