--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -8,6 +8,7 @@
     <%= f.input :first_name %>
     <%= f.input :last_name %>
     <%= f.input :email %>
+    <%= f.association :school, label: 'Campus', label_method: :city %>
   </div>
 </div>
   <div class="row">
