--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,13 @@
 <div id="index-banner" class="parallax-container">
   <div class="section no-pad-bot">
     <div class="container">
-      <br><br>
+      <p id="notice"><%= notice %></p>
+
       <!-- banner section -->
       <%= render 'banner_info' %>
       <br><br>
+      <br><br>
+
     </div>
   </div>
   <div class="parallax"><%= image_tag 'tiy1.jpg' %></div>
@@ -47,11 +50,11 @@
 <div id="signup" class="modal">
   <div class="modal-content">
     <div class="row">
-    <div class="col s3"></div>
-    <div class="col s6">
+    <div class="col s0 l3"></div>
+    <div class="col s12 l6">
      <%= render partial: 'users/form', locals: {user: @user} %>
     </div>
-    <div class="col s3"></div>
+    <div class="col s0 l3"></div>
    </div>
   </div>
 </div>
