--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(user) do |f| %>
+<%= simple_form_for(user, remote: true) do |f| %>
   <%= f.error_notification %>
 <div class="row">
   <h3>Register Here!</h3>
