--- a/app/views/users/create.js.erb
+++ b/app/views/users/create.js.erb
@@ -1,1 +1,4 @@
-$("#signup").html("<%= j image_tag 'http://www.reactiongifs.com/r/tghf.gif' %> ");
+
+
+// $("#signup").html("<%= j render 'slack' %>").addClass('center');
+$("#signup").html("<%= j render 'users/slack' %>").addClass('center');
