--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,13 @@
     </div>
 
       <div class="container">
-        <p id="notice"><%= notice %></p>
+        <p id="notice">
+          <% if notice %>
+            <script type="text/javascript">
+              Materialize.toast('<%= notice %>', 3000)
+            </script>
+          <% end %>
+        </p>
         <%= yield %>
       </div>
 
