--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,20 @@
 
+
+<h2>Participating Campuses</h2>
 <ul class="collapsible" data-collapsible="accordion">
   <% @cities.each do |school| %>
   <li>
-    <div class="collapsible-header" id="schools"><h4><i class="material-icons">filter_drama</i><%= school.city %></h4> <div class="right-align"><%= link_to "Go To #{school.city} Page", school_path(school), class: "btn" %></div></div>
+  <div class="collapsible-header">
+    <div class="row" id="schools">
+      <div class="col s12 l6">
+        <h4><i class="material-icons">perm_identity</i><%= school.city %></h4>
+      </div>
+      <div class="col s12 l6">
+        <div class="right-align"><%= link_to "Go To #{school.city} Page", school_path(school), class: "btn" %></div>
+      </div>
+    </div>
+  </div>
+
     <div class="collapsible-body">
       <ul class="collection with-header">
         <% school.teams.each do |team| %>
