--- a/app/views/home/slack.html.erb
+++ b/app/views/home/slack.html.erb
@@ -15,6 +15,6 @@
   <div class="center">
     <h3>Now, Sign Up for the Slack Channel!!</h3>
     <h1 class="center">👇 <br>
-    <script async defer src="https://aqueous-wave-44276.herokuapp.com/slackin.js?"></script></h1>
+    <script async defer src="https://aqueous-wave-44276.herokuapp.com/slackin.js?large"></script></h1>
   </div>
 </div>
