--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -10,6 +10,6 @@
 <div class="footer-copyright">
   <div class="container">
   Made with <span id="taco">🌮 </span> in <%= link_to "Houston", "http://theironyard.com/houston", class: "brown-text text-lighten-3" %>
-  <div class="right"><h5>Join The Slacks 👉  <script async defer src="https://aqueous-wave-44276.herokuapp.com/slackin.js?"></script></h5></div>
+  <div class="right"><h5>Join The Slacks 👉  <script async defer src="https://aqueous-wave-44276.herokuapp.com/slackin.js?large"></script></h5></div>
   </div>
 </div>
