--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -9,7 +9,7 @@
 </div>
 <div class="footer-copyright">
   <div class="container">
-  Made with <span id="taco">🌮 </span> in <%= link_to "Houston", "http://theironyard.com/houston", class: "brown-text text-lighten-3" %>
+  Made with <span id="taco">🌮</span>s in <%= link_to "Houston", "http://theironyard.com/houston", class: "tiygray-text text-lighten-3" %>
   <div class="right"><h5>Join The Slacks 👉  <script async defer src="https://aqueous-wave-44276.herokuapp.com/slackin.js?large"></script></h5></div>
   </div>
 </div>
