--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -31,8 +31,16 @@
 <div class="parallax-container valign-wrapper">
   <div class="section no-pad-bot">
     <div class="container">
-      <!-- faq section -->
-      <%= render 'faq' %>
+
+      <div class="row">
+        <div class="col s12 center">
+          <h3><i class="mdi-content-send tiygray-text"></i></h3>
+          <h4 class="white-text">Contact Us</h4>
+          <p class="center light white-text">Add an issue to the Github page, and join the conversation on Slack!</p>
+        </div>
+      </div>
+
+
     </div>
   </div>
   <div class="parallax"><%= image_tag 'tiy2.jpg' %></div>
@@ -41,11 +49,25 @@
 <div class="container">
   <div class="section">
 
-    <div class="row">
-      <div class="col s12 center">
-        <h3><i class="mdi-content-send brown-text"></i></h3>
-        <h4>Contact Us</h4>
-        <p class="center light">Add an issue to the Github page, and join the conversation on Slack!</p>
+    <!-- faq section -->
+    <div class="row hide-on-med-and-down">
+      <h3 class="header col s12 light"></h3>
+        <%= render 'faq' %>
+    </div>
+
+    <div class="row hide-on-large-only">
+      <!-- Modal Trigger -->
+      <div class="center">
+        <h3><%= link_to "FAQs", "#faq", class: "btn-large tiygray modal-trigger"%></h3>
+      </div>
+
+      <!-- Modal Structure -->
+      <div id="faq" class="modal">
+        <div class="modal-content">
+          <%= render 'faq' %>
+        </div>
+        <div class="modal-footer">
+        </div>
       </div>
     </div>
 
