--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -12,17 +12,16 @@
       <li><%= link_to "Slack Team", "https://ironnationhack.slack.com", class: "waves-effect", target: "_blank" %></li>
       <li><%= link_to "#ironnationhack", "https://twitter.com/search?f=tweets&q=%23ironnationhack&src=typd", class: "waves-effect", target: "_blank" %></li>
       <% if judge_signed_in? %>
+        <li class="divider"></li>
+        <li><%= link_to "Judging Stuff", judges_path, class: "waves-effect" %></li>
         <li>
         <%= link_to('Logout', destroy_judge_session_path, :method => :delete) %>
         </li>
       <% else %>
+        <li class="divider"></li>
         <li>
         <%= link_to('Judging Login', judges_path)  %>
         </li>
-      <% end %>
-      <% if judge_signed_in? %>
-        <li><div class="divider"></div></li>
-        <li><%= link_to "Judging Stuff", judges_path, class: "waves-effect" %></li>
       <% end %>
     </ul>
   </ul>
@@ -35,23 +34,24 @@
       </div>
     </li>
     <li><%= link_to "Register as a Mentor", new_mentor_path, class: "waves-effect" %></li>
-    <% if judge_signed_in? %>
-    <li>
-    <%= link_to('Logout', destroy_judge_session_path, :method => :delete) %>
-    </li>
-    <% else %>
-    <li>
-    <%= link_to('Judging Login', judges_path)  %>
-    </li>
-    <% end %>
     <li><div class="divider"></div></li>
     <li><a class="subheader">Additional Links</a></li>
     <li><%= link_to "IronNation Github", "https://github.com/IronNation", class: "waves-effect", target: "_blank" %></li>
     <li><%= link_to "Slack Team", "https://ironnationhack.slack.com", class: "waves-effect", target: "_blank" %></li>
     <li><%= link_to "#ironnationhack", "https://twitter.com/search?f=tweets&q=%23ironnationhack&src=typd", class: "waves-effect", target: "_blank" %></li>
     <% if judge_signed_in? %>
-    <li><div class="divider"></div></li>
-    <li><%= link_to "Judging Stuff", judges_path, class: "waves-effect" %></li>
+      <li class="divider"></li>
+      <li><a class="subheader">Stuff For Judges</a></li>
+      <li><%= link_to "Judging Stuff", judges_path, class: "waves-effect" %></li>
+      <li>
+      <%= link_to('Logout', destroy_judge_session_path, :method => :delete) %>
+      </li>
+    <% else %>
+      <li class="divider"></li>
+      <li><a class="subheader">Stuff For Judges</a></li>
+      <li>
+      <%= link_to('Judging Login', judges_path)  %>
+      </li>
     <% end %>
 
   </ul>
