--- a/app/views/mentors/_form.html.erb
+++ b/app/views/mentors/_form.html.erb
@@ -2,10 +2,14 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :first_name %>
-    <%= f.input :last_name %>
-    <%= f.input :email %>
-    <%= f.association :schools, label: 'Mark The Campuses For Which You Will Be Available:', label_method: :city, include_blank: 'Select Campus(es)' %>
+    <div class="row">
+      <div class="col s12 m12 l8">
+        <%= f.input :first_name %>
+        <%= f.input :last_name %>
+        <%= f.input :email %>
+        <%= f.association :schools, label: 'Mark The Campuses For Which You Will Be Available:', label_method: :city, include_blank: 'Select Campus(es)' %>
+      </div>
+    </div>
   </div>
 
   <div class="form-actions">
