--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -5,10 +5,26 @@
 </div>
 <div class="row">
   <div class="form-inputs">
-    <%= f.input :first_name %>
-    <%= f.input :last_name %>
-    <%= f.input :email %>
+    <div class="col s12 m12 l6">
+      <%= f.input :first_name %>
+    </div>
+    <div class="col s12 m12 l6">
+      <%= f.input :last_name %>
+    </div>
+    <div class="row">
+      <div class="col s12 m12 l6">
+        <%= f.input :email %>
+      </div>
+      <div class="col s12 m12 l6">
+        <%= f.input :github_username, label: "Github Username" %>
+      </div>
+    </div>
+<div class="row">
+  <div class="col s12 m12 l6">
     <%= f.association :school, label: 'Campus', label_method: :city %>
+  </div>
+</div>
+
   </div>
 </div>
   <div class="row">
