--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,9 @@
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+
+<div class="row">
+  <div class="col s12 m12 l6">
+    <%= image_tag @user.avatar_url, class: "circle responsive-img" %>
+  </div>
+  <div class="col s12 m12 l6">
+    <h2><%= @user.name %></h2>
+  </div>
+</div>
