adds github oauth login

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,7 @@
 @import "materialize/components/color";
 @import 'materialize';
+@import "font-awesome-sprockets";
+@import "font-awesome";
 
 .tiygray {
   background-color: #233139 !important;
