--- a/app/views/home/slack.html.erb
+++ b/app/views/home/slack.html.erb
@@ -5,16 +5,51 @@
         Materialize.toast('<%= notice %>', 3000)
       </script>
     <% end %>
-</p>
-  <div class="center">
+  </p>
+  <div class="row center">
     <h2>Great Success!</h2>
   </div>
-  <div class="center">
+  <div class="row center">
     <%= image_tag @gif.sample, id: 'gif' %>
   </div>
-  <div class="center">
-    <h3>Now, Sign Up for the Slack Channel!!</h3>
+  <div class="row center">
+    <h3>Only 2 More Steps:</h3>
+  </div>
+
+<div class="divider"></div>
+  <div class="row center">
+    <h3>1) Select Your Campus</h3>
+  </div>
+  <div class="row">
+    <div class="col l3"></div>
+    <div class="col s12 m12 l6">
+      <%= simple_form_for(@user, remote: true) do |f| %>
+        <%= f.error_notification %>
+
+        <div class="form-inputs">
+          <%= f.association :school, label: "Campus", prompt: "Select Your Campus", label_method: :city %>
+        </div>
+
+        <div class="form-actions">
+          <%= f.button :submit %>
+        </div>
+      <% end %>
+    </div>
+    <div class="col l3"></div>
+  </div>
+
+<div class="divider"></div>
+  <div class="row center">
+    <h3>2) Sign Up for the Slack Channel</h3>
     <h1 class="center">👇 <br>
     <script async defer src="https://aqueous-wave-44276.herokuapp.com/slackin.js?large"></script></h1>
   </div>
+</div>
+
+<div class="divider"></div>
+<div class="row">
+  <h3>That's it. Let's Get Hacking!</h3>
+</div>
+<div class="row">
+  <%= link_to "Get Started", root_path, class: "btn-large btn-primary" %>
 </div>
