--- a/app/views/mentors/new.html.erb
+++ b/app/views/mentors/new.html.erb
@@ -1,3 +1,3 @@
-<h1>Thank You For Mentoring Our Students/Alumni</h1>
+<h1>Thank You For Mentoring Our Students</h1>
 
 <%= render 'form', mentor: @mentor %>
