--- a/app/views/home/_faq.html.erb
+++ b/app/views/home/_faq.html.erb
@@ -5,15 +5,15 @@
   </li>
   <li class="collection-item">
     <b>What are the times and dates?</b> <br>
-  <br><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amicitiam autem adhibendam esse censent, quia sit ex eo genere, quae prosunt. In qua quid est boni praeter summam voluptatem, et eam sempiternam? Si quicquam extra virtutem habeatur in bonis. </em></li>
+  <br><em>Hacking will commence at 6pm CDT Friday, January 6, 2017, and continue until 3pm CDT Sunday, January 8. </em></li>
   <li class="collection-item">
     <b>Where is this hackathon?</b> <br>
-  <br><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amicitiam autem itant: mihi sic usus est, tibi ut opus est facto, fac. An hoc usque quaque, aliter in vita? Respondent extrema primis, media utrisque, omnia omnibus. Cum autem in quo sapienter dicimus, id a primo rectissime dicitur. Nihil opus est exemplis hoc facere longius. Quod totum contra est.</em></li>
+  <br><em>Wherever you want it to be. It is a virtual hackathon, so as long as you have wifi and power, you are good to go. Iron Yard campuses across this great nation will host hackers, so if you are looking for some whiteboards, coffee, and friendly faces, find your hub. </em></li>
   <li class="collection-item">
     <b>Who can participate?</b> <br>
-  <br><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amicitiam autem adhibendam esse censent, quia sit ex eo genere, quae prosunt.</em></li>
+  <br><em>This hackathon is open to all Iron Yarders, past, present, and future.</em></li>
   <li class="collection-item">
     <b>What is the theme of this hackathon?</b> <br>
-  <br><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amicitiam autem adhibendam esse censent, quia sit ex eo genere, quae prosunt. </em></li>
+  <br><em>The theme of this hackathon is: NEW SOLUTIONS FOR A NEW YEAR. Identify a problem facing your community (local, regional, national, global, or universal), and come up with a way to address it. The Github organization has links to public datasets and project ideas. Feel free to jump on a project that interests you, or add your own. </em></li>
 
 </ul>
