--- a/app/views/home/_faq.html.erb
+++ b/app/views/home/_faq.html.erb
@@ -11,7 +11,7 @@
   <br><em>Wherever you want it to be. It is a virtual hackathon, so as long as you have wifi and power, you are good to go. Iron Yard campuses across this great nation will host hackers, so if you are looking for some whiteboards, coffee, and friendly faces, find your hub. </em></li>
   <li class="collection-item">
     <b>Who can participate?</b> <br>
-  <br><em>This hackathon is open to all Iron Yarders, past, present, and future.</em></li>
+  <br><em>This hackathon is open to all Iron Yarders, past, present, and future and all of their crushes.</em></li>
   <li class="collection-item">
     <b>What is the theme of this hackathon?</b> <br>
   <br><em>The theme of this hackathon is: NEW SOLUTIONS FOR A NEW YEAR. Identify a problem facing your community (local, regional, national, global, or universal), and come up with a way to address it. The Github organization has links to public datasets and project ideas. Feel free to jump on a project that interests you, or add your own. </em></li>
