--- a/app/views/home/_icon_section.html.erb
+++ b/app/views/home/_icon_section.html.erb
@@ -5,7 +5,7 @@
         <div class="icon-block">
           <h2 class="center tiygray-text"><i class="material-icons">flash_on</i></h2>
           <h5 class="center tiygray-text">Iteration and Innovation</h5>
-          <p class="light tiygray-text">See what kind of magic you can spin up in a weekend! Get going on that idea that has been begging for your attention, if that's your thing. Get some new ideas and knowledge working with a new stack. See what is possible with team work, caffiene, and a ticking clock. Your portfolio will thank you.</p>
+          <p class="light tiygray-text">See what kind of magic you can spin up in a weekend! Get going on that idea that has been begging for your attention, if that's your thing. Get some new ideas and knowledge working with a new stack. See what is possible with team work, caffeine, and a ticking clock. Your portfolio will thank you.</p>
         </div>
       </div>
     </div>
@@ -18,7 +18,7 @@
         <div class="icon-block">
             <h2 class="center tiygray-text"><i class="material-icons">group</i></h2>
             <h5 class="center tiygray-text">The Iron Yard, Everywhere</h5>
-          <p class="light tiygray-text">Team up with talened Iron Yard folks around the globe. Tune in from your favorite coffee shop, kitchen table, or a participating Iron Yard campus. Collaborate with folks from your cohort, or develop new relationships with someone new.</p>
+          <p class="light tiygray-text">Team up with talented Iron Yard folks around the globe. Tune in from your favorite coffee shop, kitchen table, or a participating Iron Yard campus. Collaborate with folks from your cohort, or develop relationships with someone new.</p>
         </div>
       </div>
     </div>
@@ -32,7 +32,7 @@
         <div class="icon-block">
             <h2 class="center tiygray-text"><i class="material-icons">settings</i></h2>
             <h5 class="center tiygray-text">New Solutions for the New Year</h5>
-          <p class="light tiygray-text">Get the new year started with new solutions. Find a problem, and make a difference in your community.</p>
+          <p class="light tiygray-text">Get the year started with new solutions. Find a problem, and make a difference in your community.</p>
         </div>
       </div>
     </div>
