removes button from user index

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,9 +9,9 @@
       <div class="col s12 l6">
         <h4><i class="material-icons">perm_identity</i><%= school.city %></h4>
       </div>
-      <div class="col s12 l6">
+      <!-- <div class="col s12 l6">
         <div class="right-align"><%= link_to "Go To #{school.city} Page", school_path(school), class: "btn" %></div>
-      </div>
+      </div> -->
     </div>
   </div>
 
