--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,21 @@
 
 <div class="row">
-  <div class="col s12 m12 l6">
-    <%= image_tag @user.avatar_url, class: "circle responsive-img" %>
+  <div class="col s12 m12 l12 center">
+    <% if @user.avatar_url.present? %>
+      <%= image_tag @user.avatar_url, class: "circle responsive-img", id: "profile"%>
+    <% else %>
+      <%= image_tag 'avatar.png', class: "circle responsive-img", id: "profile"  %>
+    <% end %>
   </div>
-  <div class="col s12 m12 l6">
-    <h2><%= @user.name %></h2>
+  <div class="col s12 m12 center">
+    <div class="row">
+      <h2><%= @user.name %></h2>
+    </div>
+    <div class="row">
+      <h4><em><%= @user.school.city %> Campus</em></h4>
+    </div>
+    <div class="row">
+      <h5><em><%= @user.team.name if @user.team %></em></h5>
+    </div>
   </div>
 </div>
