--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,11 @@
 <div class="container">
   <div class="row">
-    <div class="col l6 s12">
+    <div class="col l6 s12" id="footer_about">
       <h5 class="white-text">About Us</h5>
       <p class="grey-text text-lighten-4">We are a group of TIYers who are passionate about making a difference. Let's do this together!</p>
+    </div>
+    <div class="col l6 s12" id="footer_logo">
+      <%= link_to image_tag("presented.png"), "https://theironyard.com", target: "_blank" %>
     </div>
 
   </div>
